Fix spacing for Confirm password pane

--- a/src/sass/static/pages.scss
+++ b/src/sass/static/pages.scss
@@ -1708,3 +1708,12 @@ body #not_authenticated_financial ul.checked > li {
 #self_exclusion_dialog #dialog_content {
     max-width: 496px;
 }
+
+.universal-password-alert {
+    padding: 24px 22px;
+    margin-bottom: 20px;
+}
+
+.confirm-password-form-fields {
+    margin-bottom: 22px;
+}
